--- a/product-photos/5.unmessage/serverless.yml
+++ b/product-photos/5.unmessage/serverless.yml
@@ -23,8 +23,8 @@ functions:
     environment:
       TABLE_PHOTO_REGISTRATIONS_NAME:
         Fn::ImportValue: ${self:custom.productPhotos.exportPhotoRegistrationsTableName}
-      TWILIO_ACCOUNT_SID_ENCRYPTED: ${self:custom.private.twilio.accountSid}
-      TWILIO_AUTH_TOKEN_ENCRYPTED: ${self:custom.private.twilio.authToken}
+      TWILIO_ACCOUNT_SID_ENCRYPTED: ${ssm:TWILIO_ACCOUNT_SID_ENCRYPTED}
+      TWILIO_AUTH_TOKEN_ENCRYPTED: ${ssm:TWILIO_AUTH_TOKEN_ENCRYPTED}
       TWILIO_NUMBER: ${self:custom.private.twilio.${self:custom.stage}.number}
 
 resources:
